fix info message styles a bit. AG-26131
Squashed commit of the following:

commit cc890d633fbb03ec048682d85761421f45d26f6c
Merge: 9e21e4ec 4be14729
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 30 11:58:02 2023 +0200

    Merge branch 'master' into fix/AG-26131

commit 9e21e4ecd58fa085dd546a0741291ba3873d1709
Merge: 3bf5ad2b 041b7cfb
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Oct 27 18:12:21 2023 +0300

    Merge branch 'master' into fix/AG-26131

commit 3bf5ad2b4da3e87a17cc199a49f856d146876493
Merge: 4040c477 121d5cd0
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Oct 26 17:50:37 2023 +0300

    Merge branch 'master' into fix/AG-26131

commit 4040c4775955b2c52e6f03d46721c731ab79b784
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Oct 26 17:50:12 2023 +0300

    cleanup

commit cb227af22dc068a1ed98891722a19d522527f135
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Oct 26 17:47:49 2023 +0300

    revert onClickHandlers

commit 54a963ee4bf67c6d857bc0a1c62f02e09938946f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 25 17:58:47 2023 +0300

    fix remove-all-modal style

commit 6887d245a8fa689c6c533247ea30b7de8065bf51
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 25 17:55:36 2023 +0300

    fix info message style

commit e58eb326b839e628a12d89f4c03c656bbd7be93d
Merge: 06a8476c f207a4d7
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 25 17:42:27 2023 +0300

    Merge branch 'fix/AG-26131' of ssh://bit.int.agrd.dev:7999/extensions/vpn-extension into fix/AG-26131

commit f207a4d75f63e39caa26bbf62ddfae341551a963
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 24 16:23:10 2023 +0300

    cleanup

commit 1015b3013b425c056b78ef18f88fdf0fe02d2e9d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 24 16:03:32 2023 +0300

    fix popup auth styles and links

commit 7f9903a644821ba57ba6d49a331110a25e831337
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 24 1

--- a/src/options/components/App/app.pcss
+++ b/src/options/components/App/app.pcss
@@ -17,7 +17,6 @@
 
     &__title {
         width: 100%;
-        word-break: break-all;
         display: inline-flex;
         align-items: center;
         justify-content: space-between;
