--- a/src/options/components/Exclusions/Actions/RemoveAllModal/remove-all-modal.pcss
+++ b/src/options/components/Exclusions/Actions/RemoveAllModal/remove-all-modal.pcss
@@ -2,7 +2,7 @@
 
     &__message {
         margin-bottom: 24px;
-        max-width: 420px;
+        max-width: 480px;
     }
 
     & .button {
