--- a/src/options/components/Exclusions/ChildrenList/children-list.pcss
+++ b/src/options/components/Exclusions/ChildrenList/children-list.pcss
@@ -4,6 +4,10 @@
         display: flex;
         align-items: flex-start;
         margin: 0 0 16px 16px;
+
+        & .content__subtitle {
+            margin: 0 0 16px 0;
+        }
     }
 
     &__add-subdomain {
