--- a/src/options/components/Exclusions/ExclusionsModal/exclusions-modal.pcss
+++ b/src/options/components/Exclusions/ExclusionsModal/exclusions-modal.pcss
@@ -13,6 +13,14 @@
     &__mode {
         height: 320px;
     }
+
+    & .content__title {
+        margin: 0 8px 8px 0;
+    }
+
+    & .content__subtitle {
+        margin: 0 0 24px 0;
+    }
 }
 
 .mode-select-button {
