--- a/src/options/components/Exclusions/exclusions.pcss
+++ b/src/options/components/Exclusions/exclusions.pcss
@@ -205,7 +205,7 @@
 }
 
 .modal {
-    width: 500px;
+    width: 560px;
     max-height: 535px;
     overflow-y: auto;
     background: var(--white-strong);
