--- a/src/popup/components/InfoMessage/info-message.pcss
+++ b/src/popup/components/InfoMessage/info-message.pcss
@@ -39,22 +39,27 @@
         justify-content: space-between;
         width: 100%;
         align-items: center;
-        padding: 10px 15px;
+        padding: 12px 16px;
     }
 
     &__text {
         color: #fff;
         font-size: 12px;
         line-height: 16px;
-        margin-right: 21px;
+        margin-right: 12px;
+        max-width: 160px;
     }
 
     &__btn {
-        min-width: 100px;
-        padding: 7px 12px;
+        min-width: 120px;
+        padding: 8px;
         border-radius: 8px;
+        border: none;
         font-size: 16px;
+        line-height: 21px;
         white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         &--feedback {
             min-width: 170px;
