--- a/src/popup/components/Settings/CurrentEndpoint/endpoint.pcss
+++ b/src/popup/components/Settings/CurrentEndpoint/endpoint.pcss
@@ -22,6 +22,7 @@
     &__location-container {
         margin: 0 12px;
         max-width: 108px;
+        text-align: left;
     }
 
     & .ping--connected {
